force-app/main/default/objects/Lease_Payment__c/Lease_Payment__c.object-meta.xml
<CustomObject>
    <label>Lease Payment</label>
    <nameField>
        <displayFormat>LP-{000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>