force-app/main/default/objects/Lease_Payment__c/fields/Lease_Charge__c.field-meta.xml
<CustomField>
    <fullName>Lease_Charge__c</fullName>
    <label>Lease Charge</label>
    <referenceTo>Lease_Charge__c</referenceTo>
    <relationshipLabel>Lease Payments</relationshipLabel>
    <relationshipName>Lease_Payments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>