force-app/main/default/objects/Lease_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Leasing_Team</group>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>