force-app/main/default/objects/Lease_Payment__c/listViews/Payments_and_Leases.listView-meta.xml
<ListView>
    <fullName>Payments_and_Leases</fullName>
    <columns>NAME</columns>
    <columns>Lease_Charge__c</columns>
    <columns>Tenant__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Posted__c</columns>
    <columns>Posted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Lease Payments</label>
    <sharedTo>
        <group>Leasing_Team</group>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>